--- a/src/components/widgets/About.astro
+++ b/src/components/widgets/About.astro
@@ -14,13 +14,32 @@ const lorem = new LoremIpsum(
 	},
 	'html'
 );
+export interface Props {
+	[props: string]: any;
+}
+
+const { ...props } = Astro.props as Props;
 ---
 
-<h1 class="text-5xl mb-6">
-	<span>Sobre</span>
-	<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">nós</span>
-</h1>
+<div {...props}>
+	<h1 class="text-5xl mb-6">
+		<span>Sobre</span>
+		<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">nós</span>
+	</h1>
 
-<div class="text-justify mb-12">
-	<span set:html={lorem.generateParagraphs(7)}></span>
+	<div class="card w-1/2 bg-sw-primary text-primary-content">
+		<div class="card-body">
+			<p>
+				Somos um pequeno estúdio brasileiro, em 2016 lançamos o título “Mathematical!” e desde 2020 trabalhamos
+				com a criação de jogos independentes e com a produção de diversos conteúdos audiovisuais como animações,
+				ilustrações, músicas, sites, vídeos e muito mais!
+			</p>
+			<p>
+				Nossa missão é criar experiências únicas e, como se com magia, encantar com sorrisos a quem atingimos
+				através da produção de peças digitais com imersão e interatividade.
+			</p>
+
+		</div>
+	</div>
+
 </div>
