--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -5,7 +5,7 @@ import Hero from '~/components/widgets/Hero.astro';
 
 <Layout>
 	<Hero />
-	<main class="max-w-6xl mx-auto pt-4 px-4 lg:px-0 relative">
+	<main >
 		<slot />
 	</main>
 </Layout>
