--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -16,10 +16,10 @@ const lorem = new LoremIpsum(
 );
 ---
 
-<h1 class="text-center uppercase text-5xl">
+<h1 class="font-black uppercase text-5xl">
 	<span>A tripulação</span>
 </h1>
-<h2 class="text-center text-2xl mb-6">
+<h2 class="text-2xl mb-6">
 	<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">Nosso incrível time</span>
 </h2>
 
