--- a/src/components/widgets/About.astro
+++ b/src/components/widgets/About.astro
@@ -22,24 +22,24 @@ const { ...props } = Astro.props as Props;
 ---
 
 <div {...props}>
-	<h1 class="text-5xl mb-6">
-		<span>Sobre</span>
-		<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">nós</span>
-	</h1>
+	<div class="max-w-6xl mx-auto px-8 sm:px-6 ">
+		<h1 class="font-black uppercase text-5xl mb-6">
+			<span>Sobre</span>
+			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">nós</span>
+		</h1>
 
-	<div class="card w-1/2 bg-sw-primary text-primary-content">
-		<div class="card-body">
-			<p>
-				Somos um pequeno estúdio brasileiro, em 2016 lançamos o título “Mathematical!” e desde 2020 trabalhamos
-				com a criação de jogos independentes e com a produção de diversos conteúdos audiovisuais como animações,
-				ilustrações, músicas, sites, vídeos e muito mais!
-			</p>
-			<p>
-				Nossa missão é criar experiências únicas e, como se com magia, encantar com sorrisos a quem atingimos
-				através da produção de peças digitais com imersão e interatividade.
-			</p>
-
+		<div class="card md:w-1/2 bg-sw-primary text-primary-content bottom-0">
+			<div class="card-body">
+				<p>
+					Somos um pequeno estúdio brasileiro, em 2016 lançamos o título “Mathematical!” e desde 2020
+					trabalhamos com a criação de jogos independentes e com a produção de diversos conteúdos audiovisuais
+					como animações, ilustrações, músicas, sites, vídeos e muito mais!
+				</p>
+				<p>
+					Nossa missão é criar experiências únicas e, como se com magia, encantar com sorrisos a quem
+					atingimos através da produção de peças digitais com imersão e interatividade.
+				</p>
+			</div>
 		</div>
 	</div>
-
 </div>
