--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -1,6 +1,5 @@
 ---
 import ProductCard from '~/components/atoms/ProductCard.astro';
-import DividerRect from '~/components/atoms/DividerRect.astro';
 
 export interface Props {
 	[props: string]: any;
@@ -10,13 +9,13 @@ const { ...props } = Astro.props as Props;
 ---
 <div {...props}>
 	<div>
-		<h1 class="text-5xl mb-6 mx-8">
+		<h1 class="font-black uppercase text-5xl mb-6">
 			<span>O que</span>
 			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">fazemos</span>
 		</h1>
 
 		<div class="mb-12">
-			<div class="flex flex-wrap gap-12 p-4 justify-center align-middle z-20">
+			<div class="flex flex-wrap gap-12 justify-center align-middle">
 				<ProductCard
 					iconSrc="./models/products/tools.fbx"
 					title="Games"
@@ -44,7 +43,6 @@ const { ...props } = Astro.props as Props;
 			</div>
 		</div>
 	</div>
-	<DividerRect class="rounded-t-2xl bg-sw-secondary-700 dark:bg-sw-primary-700"/>
 </div>
 
 
