--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -13,7 +13,7 @@ import HeroCanvas from '~/components/atoms/HeroCanvas';
 	<Image class="cover w-full h-full block md:hidden" src={heroImageSM} alt="" />
 	<Image class="cover w-full h-full hidden md:block" src={heroImageMD} alt="" />
 	<div class="absolute top-0 right-0 w-full h-full">
-		<HeroCanvas modelPath={"./models/hero/character.gltf"} client:load />
+		<HeroCanvas client:load />
 	</div>
 	<DividerWave />
 </div>
