--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -20,23 +20,23 @@ const { ...props } = Astro.props as Props;
 					iconSrc="./models/products/tools.fbx"
 					title="Games"
 					subtitle="jogos 2D e 3D"
-					description="desenvolvimento de jogos 2D e 3D em Unity Engine."
+					description="desenvolvimento de jogos 2D ou 3D em Unity Engine."
 				/>
 				<ProductCard
 					iconSrc="./models/products/tools.fbx"
-					title="Sites"
+					title="Web"
 					subtitle="sites interativos"
-					description="desenvolvimento de sites únicos com elementos interativos."
+					description="desenvolvimento de <span class='text-sw-accent'>experiências gamificadas</span> na web, podendo incluir peças 2D, 3D ou até mesmo jogos, desafios e eventos interativos!"
 				/>
 				<ProductCard
 					iconSrc="./models/products/tools.fbx"
 					title="Apps"
 					subtitle="aplicativos"
-					description="é mentira"
+					description="desenvolvimento de aplicativos nativos para mobile."
 				/>
 				<ProductCard
 					iconSrc="./models/products/tools.fbx"
-					title="Sei lá"
+					title="Áudio e Música"
 					subtitle="bluberson"
 					description="blibliblibs"
 				/>
