--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -14,15 +14,23 @@ const lorem = new LoremIpsum(
 	},
 	'html'
 );
+
+export interface Props {
+	[props: string]: any;
+}
+
+const { ...props } = Astro.props as Props;
 ---
 
-<h1 class="font-black uppercase text-5xl">
-	<span>A tripulação</span>
-</h1>
-<h2 class="text-2xl mb-6">
-	<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">Nosso incrível time</span>
-</h2>
+<div {...props}>
+	<h1 class="font-black uppercase text-5xl">
+		<span>A tripulação</span>
+	</h1>
+	<h2 class="text-2xl mb-6">
+		<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">Nosso incrível time</span>
+	</h2>
 
-<div class="text-justify mb-12">
-	<span set:html={lorem.generateParagraphs(2)}></span>
+	<div class="text-justify mb-12">
+		<span set:html={lorem.generateParagraphs(2)}></span>
+	</div>
 </div>
