--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,6 @@ const meta = {
 	<Products class="max-w-6xl mx-auto px-8 sm:px-6 pt-4 relative z-20"/>
 	<DividerRect class="w-full -mt-32 h-32 absolute z-10  bg-sw-secondary-700 dark:bg-sw-primary-700 "/>
 	<About class="md:px-8 shadow-md bg-sw-secondary-700 dark:bg-sw-primary-700 z-20"/>
-	<Team />
-	<Contact />
+	<Team class="max-w-6xl mx-auto px-8 sm:px-6"/>
+	<Contact class="max-w-6xl mx-auto px-8 sm:px-6"/>
 </Layout>
