--- a/src/components/atoms/ProductCard.astro
+++ b/src/components/atoms/ProductCard.astro
@@ -16,10 +16,10 @@ const { iconSrc, title, subtitle, description } = Astro.props as Props;
 
 <ToggleCard client:load>
 	<CardIconCanvas fbxPath={iconSrc} slot="cardIcon" client:load />
-	<h2 slot="title" class="card-title">{title}</h2>
-	<p slot="subtitle">{subtitle}</p>
-	<p slot="description">{description}</p>
-	
+	<h2 slot="title" class="card-title" set:html={title}></h2>
+	<p slot="subtitle" set:html={subtitle}></p>
+	<p slot="description" set:html={description}></p>
+
 	<Icon slot="buttonIconPlus" name="akar-icons:plus" class="w-6 h-6" />
 	<Icon slot="buttonIconMinus" name="akar-icons:minus" class="w-6 h-6" />
 </ToggleCard>
