--- a/src/components/widgets/About.astro
+++ b/src/components/widgets/About.astro
@@ -28,7 +28,7 @@ const { ...props } = Astro.props as Props;
 			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">nós</span>
 		</h1>
 
-		<div class="card md:w-1/2 bg-sw-primary text-primary-content bottom-0">
+		<div class="card md:w-3/5 lg:w-1/2 mx-auto lg:mx-0 bg-sw-primary text-primary-content bottom-0">
 			<div class="card-body">
 				<p>
 					Somos um pequeno estúdio brasileiro, em 2016 lançamos o título “Mathematical!” e desde 2020
