--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -16,7 +16,7 @@ const { ...props } = Astro.props as Props;
 		</h1>
 
 		<div class="mb-12">
-			<div class="flex flex-wrap gap-12 justify-center align-middle">
+			<div class="flex flex-wrap gap-y-8 justify-center align-middle">
 				<ProductCard
 					iconSrc="./models/products/tools.fbx"
 					title="Games"
