--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import { LoremIpsum } from 'lorem-ipsum';
-import DividerArrowDown from '~/components/atoms/DividerArrowDown.astro';
+import DividerArrowDown from '@atoms/DividerArrowDown.astro';
 
 const lorem = new LoremIpsum(
 	{
