--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -1,6 +1,6 @@
 ---
-import ButtonToggleTheme from '~/components/core/ButtonToggleTheme.astro';
-import ButtonToggleMenu from '~/components/core/ButtonToggleMenu.astro';
+import ButtonToggleTheme from '@core/ButtonToggleTheme.astro';
+import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 ---
 
 <header
