--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -1,11 +1,11 @@
 ---
 import { Image } from '@astrojs/image/components';
 
-import heroImageSM from '~/assets/images/hero_bg_sm.png';
-import heroImageMD from '~/assets/images/hero_bg_md.png';
+import heroImageSM from '@images/hero_bg_sm.png';
+import heroImageMD from '@images/hero_bg_md.png';
 
-import DividerWave from '~/components/atoms/DividerWave.astro';
-import HeroCanvas from '~/components/atoms/HeroCanvas';
+import DividerWave from '@atoms/DividerWave.astro';
+import HeroCanvas from '@atoms/HeroCanvas';
 
 ---
 
