--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -1,5 +1,5 @@
 ---
-import ProductCard from '~/components/atoms/ProductCard.astro';
+import ProductCard from '@atoms/ProductCard.astro';
 
 export interface Props {
 	[props: string]: any;
