--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import { SITE } from '~/config.mjs';
-import Layout from '~/layouts/HomeLayout.astro';
+import Layout from '@layouts/HomeLayout.astro';
 
-import Products from '~/components/widgets/Products.astro';
-import Contact from '~/components/widgets/Contact.astro';
-import About from '~/components/widgets/About.astro';
-import Team from '~/components/widgets/Team.astro';
+import Products from '@widgets/Products.astro';
+import Contact from '@widgets/Contact.astro';
+import About from '@widgets/About.astro';
+import Team from '@widgets/Team.astro';
 
-import DividerRect from '~/components/atoms/DividerRect.astro';
+import DividerRect from '@atoms/DividerRect.astro';
 
 const meta = {
 	title: SITE.title,
