--- a/src/components/atoms/ProductCard.astro
+++ b/src/components/atoms/ProductCard.astro
@@ -1,8 +1,8 @@
 ---
 import { Icon } from 'astro-icon';
 
-import ToggleCard from '~/components/atoms/ToggleCard';
-import CardIconCanvas from './CardIconCanvas';
+import ToggleCard from '@atoms/ToggleCard';
+import CardIconCanvas from '@atoms/CardIconCanvas';
 
 export interface Props {
 	iconSrc: string;
@@ -15,11 +15,10 @@ const { iconSrc, title, subtitle, description } = Astro.props as Props;
 ---
 
 <ToggleCard client:load>
-	<CardIconCanvas fbxPath={iconSrc} slot="cardIcon" client:load />
+	<CardIconCanvas fbxPath={iconSrc} slot="cardIcon" />
 	<h2 slot="title" class="card-title" set:html={title}></h2>
 	<p slot="subtitle" set:html={subtitle}></p>
 	<p slot="description" set:html={description}></p>
-
 	<Icon slot="buttonIconPlus" name="akar-icons:plus" class="w-6 h-6" />
 	<Icon slot="buttonIconMinus" name="akar-icons:minus" class="w-6 h-6" />
 </ToggleCard>
