--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '~/layouts/BaseLayout.astro';
-import Hero from '~/components/widgets/Hero.astro';
+import Layout from '@layouts/BaseLayout.astro';
+import Hero from '@widgets/Hero.astro';
 ---
 
 <Layout>
