--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -4,141 +4,6 @@
 
 @layer components {}
 
-.sw-divider {
-	@apply stroke-sw-secondary;
-
-	fill-opacity: 1;
-	stroke-width: 2;
-}
-
-.dark .sw-divider {
-	@apply stroke-sw-primary;
-}
-
-.sw-text-bg-fill {
-	@apply sw-text sw-bg sw-fill;
-}
-
-.sw-text-bg-fill-reverse {
-	@apply sw-text-reverse sw-bg-reverse sw-fill-reverse;
-}
-
-.sw-text {
-	@apply text-sw-primary dark:text-sw-secondary;
-}
-
-.sw-text-reverse {
-	@apply text-sw-secondary dark:text-sw-primary;
-}
-
-.sw-bg {
-	@apply bg-sw-primary dark:bg-sw-secondary;
-}
-
-.sw-bg-reverse {
-	@apply bg-sw-secondary dark:bg-sw-primary;
-}
-
-.sw-fill {
-	@apply fill-sw-primary dark:fill-sw-secondary;
-}
-
-.sw-fill-reverse {
-	@apply fill-sw-secondary dark:fill-sw-primary;
-}
-
-[data-sw-btn-toggle-menu] {
-	path {
-		@apply transition;
-	}
-
-	&.toggled g {
-		>path:first-child {
-			@apply -rotate-45 translate-y-[15px] translate-x-[-3px];
-		}
-
-		>path:last-child {
-			@apply rotate-45 translate-y-[-8px] translate-x-[14px];
-		}
-	}
-}
-
-[data-sw-btn-toggle-theme] {
-
-	// sun
-	svg:first-child {
-		@apply opacity-100;
-	}
-
-	// moon
-	svg:last-child {
-		@apply opacity-0;
-	}
-
-	&.toggled {
-
-		// sun
-		svg:first-child {
-			@apply opacity-0;
-		}
-
-		// moon
-		svg:last-child {
-			@apply opacity-100;
-		}
-	}
-}
-
-[data-sw-btn-toggle-product] {
-
-	// sun
-	svg:first-child {
-		@apply opacity-100;
-	}
-
-	// moon
-	svg:last-child {
-		@apply opacity-0;
-	}
-
-	&.toggled {
-
-		// sun
-		svg:first-child {
-			@apply opacity-0;
-		}
-
-		// moon
-		svg:last-child {
-			@apply opacity-100;
-		}
-	}
-}
-
-.text-gradient {
-	font-weight: 900;
-	background-clip: text;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	background-size: 100% 200%;
-	background-position-y: 100%;
-	border-radius: 0.4rem;
-	animation: pulse 4s ease-in-out infinite;
-	-webkit-animation: pulse 4s ease-in-out infinite;
-	-webkit-border-radius: 0.4rem;
-	-moz-border-radius: 0.4rem;
-	-ms-border-radius: 0.4rem;
-	-o-border-radius: 0.4rem;
-}
-
-@keyframes pulse {
-
-	0%,
-	100% {
-		background-position-y: 0%;
-	}
-
-	50% {
-		background-position-y: 50%;
-	}
-}
+@import "spacewiz.scss";
+@import "text.scss";
+@import "toggle.scss";
