--- a/src/components/core/ButtonToggleTheme.astro
+++ b/src/components/core/ButtonToggleTheme.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon';
 const {
 	label = 'Toggle between Dark and Light mode',
-	className = 'rounded-lg text-sm p-2.5 inline-flex items-center relative sw-text',
+	className = 'rounded-lg text-sm p-2.5 inline-flex items-center relative spacewiz-text',
 	iconNameSun = 'akar-icons:sun-fill',
 	iconClassSun = 'w-6 h-6 transition duration-1000',
 	iconNameMoon = 'akar-icons:moon-fill',
