--- a/src/components/atoms/ProductCard.astro
+++ b/src/components/atoms/ProductCard.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon';
 
 import ToggleCard from '@atoms/ToggleCard';
-import CardIconCanvas from '@atoms/CardIconCanvas';
+import CardIconCanvas from '@atoms/CardIconCanvas.dev';
 
 export interface Props {
 	iconSrc: string;
