--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -20,15 +20,18 @@ export interface Props {
 
 const { ...props } = Astro.props as Props;
 ---
-<div {...props}>
-	<h1 class="font-black uppercase text-5xl">
-		<span>Entre em contato</span>
-	</h1>
-	<h2 class="text-2xl mb-6">
-		<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">Nos conte uma história</span>
-	</h2>
 
-	<div class="text-justify mb-12">
+<section {...props}>
+	<header>
+		<h1 class="font-black uppercase text-5xl">
+			<span>Entre em contato</span>
+		</h1>
+		<p class="text-2xl mb-6">
+			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">Nos conte uma história</span>
+		</p>
+	</header>
+
+	<section class="text-justify mb-12">
 		<span set:html={lorem.generateParagraphs(2)}></span>
-	</div>
-</div>
+	</section>
+</section>
