--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -17,7 +17,7 @@ const lorem = new LoremIpsum(
 );
 ---
 
-<DividerArrowDown class="bg-sw-dark-700"/>
+<DividerArrowDown class="spacewiz__fill--reversed bg-sw-dark-700"/>
 
 <div class="bg-sw-dark-700"></div>
 
