--- a/src/components/core/ButtonToggleMenu.astro
+++ b/src/components/core/ButtonToggleMenu.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon';
 const {
 	label = 'Toggle Menu',
-	className = 'rounded-lg text-sm p-2.5 inline-flex items-center relative spacewiz-text',
+	className = 'rounded-lg text-sm p-2.5 inline-flex items-center relative spacewiz__text',
 	iconClass = 'w-6 h-6',
 	iconName = 'tabler:menu',
 } = Astro.props;
