--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -22,15 +22,17 @@ export interface Props {
 const { ...props } = Astro.props as Props;
 ---
 
-<div {...props}>
-	<h1 class="font-black uppercase text-5xl">
-		<span>A tripulação</span>
-	</h1>
-	<h2 class="text-2xl mb-6">
-		<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">Nosso incrível time</span>
-	</h2>
+<section {...props}>
+	<header>
+		<h1 class="font-black uppercase text-5xl">
+			<span>A tripulação</span>
+		</h1>
+		<p class="text-2xl mb-6">
+			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">Nosso incrível time</span>
+		</p>
+	</header>
 
-	<div class="text-justify mb-12">
+	<section class="text-justify mb-12">
 		<span set:html={lorem.generateParagraphs(2)}></span>
-	</div>
-</div>
+	</section>
+</section>
