--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ const { meta = {} } = Astro.props;
 		<MetaTags {...meta} />
 	</head>
 
-	<body class="antialiased py-8 md:py-0 spacewiz__bg--reverse spacewiz__text align-middle">
+	<body class="antialiased py-1 md:py-0 spacewiz__bg--reversed spacewiz__text align-middle">
 		<Header />
 		<slot />
 		<Footer />
