--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -1,5 +1,5 @@
 ---
-import ButtonToggleTheme from '@core/ButtonToggleTheme.astro';
+import ThemeToggle from '@core/ThemeToggle.astro';
 import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 ---
 
@@ -9,12 +9,13 @@ import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 	<div class="py-4 px-4 lg:px-0 mx-auto w-full md:flex md:justify-between max-w-6xl">
 		<div class="flex justify-between">
 			<a class="flex items-center">
-				<span class="self-center text-2xl font-extrabold text-sw-primary whitespace-nowrap dark:text-sw-secondary"
+				<span
+					class="self-center text-2xl font-extrabold text-sw-primary whitespace-nowrap dark:text-sw-secondary"
 					>spacewiz.dev</span
 				>
 			</a>
 			<div class="flex items-center md:hidden">
-				<ButtonToggleTheme />
+				<ThemeToggle />
 				<ButtonToggleMenu />
 			</div>
 		</div>
@@ -42,7 +43,7 @@ import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 			</ul>
 			<div class="md:self-center flex items-center mb-4 md:mb-0">
 				<div class="hidden items-center md:flex">
-					<ButtonToggleTheme />
+					<ThemeToggle />
 				</div>
 			</div>
 		</nav>
