--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -21,7 +21,7 @@ import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 		</nav>
 
 		<nav
-			class="items-center w-full md:w-auto md:flex text-sw-primary dark:text-slate-200 h-screen md:h-auto"
+			class="items-center w-full md:w-auto md:flex text-sw-primary dark:text-sw-secondary h-screen md:h-auto"
 			aria-label="Main navigation"
 			id="menu"
 		>
@@ -30,13 +30,13 @@ import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 			>
 				<li>
 					<a
-						class="font-medium hover:text-sw-primary dark:hover:text-sw-secondary px-4 py-3 flex items-center transition duration-150 ease-in-out"
+						class="font-medium hover:text-sw-primary-900 dark:hover:text-sw-secondary-600 px-4 py-3 flex items-center transition duration-150 ease-in-out"
 						href="#">Início</a
 					>
 				</li>
 				<li>
 					<a
-						class="font-medium hover:text-sw-primary dark:hover:text-sw-secondary px-4 py-3 flex items-center transition duration-150 ease-in-out"
+						class="font-medium hover:text-sw-primary-900 dark:hover:text-sw-secondary-600 px-4 py-3 flex items-center transition duration-150 ease-in-out"
 						href="#">Projetos</a
 					>
 				</li>
