--- a/src/components/atoms/ProductCard.astro
+++ b/src/components/atoms/ProductCard.astro
@@ -16,9 +16,9 @@ const { iconSrc, title, subtitle, description } = Astro.props as Props;
 
 <ToggleCard client:load>
 	<CardIconCanvas fbxPath={iconSrc} slot="cardIcon" client:load />
-	<h2 slot="title" class="card-title" set:html={title}></h2>
-	<p slot="subtitle" set:html={subtitle}></p>
-	<p slot="description" set:html={description}></p>
+	<h2 slot="title" class="card-title text-sw-navy dark:text-sw-flamingo" set:html={title}></h2>
+	<p slot="subtitle" class="spacewiz__text" set:html={subtitle}></p>
+	<p slot="description" class="spacewiz__text" set:html={description}></p>
 	<Icon slot="buttonIconPlus" name="akar-icons:plus" class="w-6 h-6" />
 	<Icon slot="buttonIconMinus" name="akar-icons:minus" class="w-6 h-6" />
 </ToggleCard>
