--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -22,17 +22,17 @@ export interface Props {
 const { ...props } = Astro.props as Props;
 ---
 
-<section {...props}>
+<div {...props}>
 	<header>
 		<h1 class="font-black uppercase text-5xl">
 			<span>A tripulação</span>
 		</h1>
-		<p class="text-2xl mb-6">
-			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-accent">Nosso incrível time</span>
+		<p class="text-2xl mb-8">
+			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-flamingo">Nosso incrível time</span>
 		</p>
 	</header>
 
 	<section class="text-justify mb-12">
 		<span set:html={lorem.generateParagraphs(2)}></span>
 	</section>
-</section>
+</div>
