--- a/src/components/widgets/About.astro
+++ b/src/components/widgets/About.astro
@@ -1,5 +1,7 @@
 ---
 import { LoremIpsum } from 'lorem-ipsum';
+import { Image, Picture } from '@astrojs/image/components';
+import swIcon from '@images/sw_icon.svg';
 
 const lorem = new LoremIpsum(
 	{
@@ -30,7 +32,7 @@ const { ...props } = Astro.props as Props;
 	</header>
 
 	<section>
-		<div class="card md:w-3/5 lg:w-1/2 mx-auto lg:mx-0 bg-sw-primary text-primary-content bottom-0">
+		<div class="card block md:w-3/5 lg:w-1/2 mx-auto lg:mx-0 bg-sw-primary text-primary-content bottom-0">
 			<div class="card-body">
 				<p>
 					Somos um pequeno estúdio brasileiro, em 2016 lançamos o título “Mathematical!” e desde 2020
@@ -43,5 +45,9 @@ const { ...props } = Astro.props as Props;
 				</p>
 			</div>
 		</div>
+
+		<figure class="w-2/6 block">
+			<img src={swIcon} alt='' width="100%"/>
+		</figure>
 	</section>
 </div>
