--- a/src/components/atoms/ProductCard.astro
+++ b/src/components/atoms/ProductCard.astro
@@ -16,7 +16,7 @@ const { iconSrc, title, subtitle, description } = Astro.props as Props;
 
 <ToggleCard client:load>
 	<CardIconCanvas fbxPath={iconSrc} slot="cardIcon" client:load />
-	<h2 slot="title" class="card-title text-sw-navy dark:text-sw-flamingo" set:html={title}></h2>
+	<h2 slot="title" class="card-title spacewiz__text--accent" set:html={title}></h2>
 	<p slot="subtitle" class="spacewiz__text" set:html={subtitle}></p>
 	<p slot="description" class="spacewiz__text" set:html={description}></p>
 	<Icon slot="buttonIconPlus" name="akar-icons:plus" class="w-6 h-6" />
