--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -16,24 +16,24 @@ const { ...props } = Astro.props as Props;
 		</h1>
 	</header>
 
-	<section class="my-8 flex justify-between align-middle">
+	<section class="my-8 flex flex-col lg:flex-row gap-24 max-h-96 overflow-y-auto md:overflow-visible items-center">
 		<ProductCard
 			iconSrc="./models/products/tools.fbx"
 			title="Games"
 			subtitle="jogos 2D e 3D"
-			description="desenvolvimento de <span class='text-sw-navy font-bold dark:text-sw-flamingo'>jogos 2D ou 3D</span> em Unity Engine"
+			description="desenvolvimento de <span class='spacewiz__text--accent'>jogos 2D ou 3D</span> em Unity Engine"
 		/>
 		<ProductCard
 			iconSrc="./models/products/tools.fbx"
 			title="Web"
 			subtitle="sites interativos"
-			description="desenvolvimento de <span class='text-sw-navy font-bold dark:text-sw-flamingo'>experiências gamificadas</span> para Web"
+			description="desenvolvimento de <span class='spacewiz__text--accent'>experiências gamificadas</span> para Web"
 		/>
 		<ProductCard
 			iconSrc="./models/products/tools.fbx"
 			title="Apps"
 			subtitle="aplicativos"
-			description="desenvolvimento de <span class='text-sw-navy font-bold dark:text-sw-flamingo'>aplicativos nativos</span> para mobile e desktop."
+			description="desenvolvimento de <span class='spacewiz__text--accent'>aplicativos nativos</span> para mobile e desktop."
 		/>
 		<ProductCard
 			iconSrc="./models/products/tools.fbx"
