--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -17,7 +17,7 @@ const { ...props } = Astro.props as Props;
 		</p>
 	</header>
 
-	<section class="grid grid-cols-2 lg:grid-cols-3 gap-16 text-justify my-16">
+	<section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-16 text-justify my-16">
 		<TeamCard />
 		<TeamCard />
 		<TeamCard />
