--- a/src/components/atoms/DividerRect.astro
+++ b/src/components/atoms/DividerRect.astro
@@ -6,5 +6,5 @@ export interface Props {
 const { ...props } = Astro.props as Props;
 ---
 <div {...props}>
-	<div class="w-full min-h-16 bottom-0 -mt-32 rounded-t-xl"></div>
+	<div class="w-full bottom-0"></div>
 </div>
