--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -23,15 +23,81 @@ const { ...props } = Astro.props as Props;
 
 <div {...props}>
 	<header>
-		<h1 class="font-black uppercase text-5xl">
+		<h1 class="font-black uppercase text-4xl">
 			<span>Entre em contato</span>
 		</h1>
 		<p class="text-2xl mb-8">
-			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-flamingo">Nos conte uma história</span>
+			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-flamingo">Nos conte uma história</span
+			>
 		</p>
 	</header>
 
-	<section class="text-justify mb-12">
-		<span set:html={lorem.generateParagraphs(2)}></span>
+	<section class="text-justify">
+		
+		<div class="container mx-auto">
+			<div class="flex my-8">
+				<div class="w-full lg:w-11/12 flex">
+					<div
+						class="w-full h-auto bg-gray-400 hidden lg:block lg:w-5/12 bg-cover rounded-l-lg"
+						style="background-image: url('https://source.unsplash.com/kvHhSroTNPY/600x800')"
+					>
+					</div>
+					<div class="w-full bg-white p-5 rounded-lg lg:rounded-l-none shadow-xl">
+						<form class="px-8 pt-6 pb-8 mb-4 bg-white rounded">
+							<div class="mb-4 md:flex md:justify-between">
+								<div class="mb-4 md:mr-2 md:mb-0">
+									<label class="block mb-2 text-sm font-bold text-gray-700" for="firstName">
+										Nome
+									</label>
+									<input
+										class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+										id="firstName"
+										type="text"
+										placeholder="seu nome"
+									/>
+								</div>
+								<div class="md:ml-2">
+									<label class="block mb-2 text-sm font-bold text-gray-700" for="lastName">
+										Sobrenome
+									</label>
+									<input
+										class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+										id="lastName"
+										type="text"
+										placeholder="seu sobrenome"
+									/>
+								</div>
+							</div>
+							<div class="mb-4">
+								<label class="block mb-2 text-sm font-bold text-gray-700" for="email"> Email</label>
+								<input
+									class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+									id="email"
+									type="email"
+									placeholder="seu email"
+								/>
+							</div>
+							<div class="mb-4">
+								<label class="block mb-2 text-sm font-bold text-gray-700" for="text">Descrição</label>
+								<textarea
+									class="w-full h-32 px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+									id="text"
+									placeholder="nos deixe sua mensagem :)"
+								/>
+							</div>
+							<div class="mb-6 text-center">
+								<button
+									class="w-full px-4 py-2 font-bold text-white spacewiz__bg--accent rounded-md hover:bg-blue-700 focus:outline-none focus:shadow-outline"
+									type="button"
+								>
+									Enviar!
+								</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</section>
 </div>
