--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -10,13 +10,13 @@ const { ...props } = Astro.props as Props;
 
 <div {...props}>
 	<header>
-		<h1 class="font-black uppercase text-5xl mb-12">
+		<h1 class="font-black uppercase text-4xl mb-12">
 			<span>O que</span>
 			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-flamingo">fazemos</span>
 		</h1>
 	</header>
 
-	<section class="my-8 flex flex-col lg:flex-row gap-24 max-h-96 overflow-y-auto md:overflow-visible items-center">
+	<section class="my-8 grid grid-cols-1 md:grid-cols-2 gap-16 md:gap-24 content-around">
 		<ProductCard
 			iconSrc="./models/products/tools.fbx"
 			title="Games"
@@ -35,11 +35,6 @@ const { ...props } = Astro.props as Props;
 			subtitle="aplicativos"
 			description="desenvolvimento de <span class='spacewiz__text--accent'>aplicativos nativos</span> para mobile e desktop."
 		/>
-		<ProductCard
-			iconSrc="./models/products/tools.fbx"
-			title="Áudio e Música"
-			subtitle=""
-			description=""
-		/>
+		<ProductCard iconSrc="./models/products/tools.fbx" title="Áudio e Música" subtitle="" description="" />
 	</section>
 </div>
