--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,17 +21,17 @@ const meta = {
 	</section>
 
 	<div class="shadow-md bg-sw-secondary-700 dark:bg-sw-primary-700 z-20" >
-		<DividerRect class="w-full -mt-32 h-32 absolute z-10 bg-sw-secondary-700 dark:bg-sw-primary-700" />
-		<section class="max-w-6xl mx-auto py-8 px-6 md:px-8">
+		<DividerRect class="w-full -mt-16 h-16 absolute z-10 bg-sw-secondary-700 dark:bg-sw-primary-700" />
+		<section class="max-w-6xl mx-auto py-8 px-6 md:px-8 h-screen">
 			<About />
 		</section>
 	</div>
 
-	<section class="max-w-6xl mx-auto my-8 px-6 md:px-8">
+	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 h-screen">
 		<Team />
 	</section>
 
-	<section class="max-w-6xl mx-auto my-8 px-6 md:px-8">
+	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 h-screen">
 		<Contact />
 	</section>
 </Layout>
