--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -9,7 +9,7 @@ import HeroCanvas from '@atoms/HeroCanvas';
 
 ---
 
-<section class="h-screen relative">
+<section class="min-h-screen relative">
 	<DividerWave class="spacewiz__fill--reversed bottom-0"/>
 	<Image class="cover w-full h-full block md:hidden" src={heroImageSM} alt="" />
 	<Image class="cover w-full h-full hidden md:block" src={heroImageMD} alt="" />
