--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,16 +22,16 @@ const meta = {
 
 	<div class="shadow-md bg-sw-secondary-700 dark:bg-sw-primary-700 z-20" >
 		<DividerRect class="w-full -mt-16 h-16 absolute z-10 bg-sw-secondary-700 dark:bg-sw-primary-700" />
-		<section class="max-w-6xl mx-auto py-8 px-6 md:px-8 md:h-screen">
+		<section class="max-w-6xl mx-auto py-8 px-6 md:px-8 min-h-screeneen">
 			<About />
 		</section>
 	</div>
 
-	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 md:h-screen">
+	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 min-h-screeneen">
 		<Team />
 	</section>
 
-	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 md:h-screen">
+	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 min-h-screeneen">
 		<Contact />
 	</section>
 </Layout>
