n era min em tudo também né pô

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,22 +16,22 @@ const meta = {
 ---
 
 <Layout>
-	<section class="max-w-6xl mx-auto px-6 md:px-8 md:h-screen">
+	<section class="max-w-6xl mx-auto px-6 md:px-8 min-h-screen">
 		<Products class="relative z-20" />
 	</section>
 
 	<div class="shadow-md bg-sw-secondary-700 dark:bg-sw-primary-700 z-20" >
 		<DividerRect class="w-full -mt-16 h-16 absolute z-10 bg-sw-secondary-700 dark:bg-sw-primary-700" />
-		<section class="max-w-6xl mx-auto py-8 px-6 md:px-8 min-h-screeneen">
+		<section class="max-w-6xl mx-auto py-8 px-6 md:px-8 min-h-screen">
 			<About />
 		</section>
 	</div>
 
-	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 min-h-screeneen">
+	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 min-h-screen">
 		<Team />
 	</section>
 
-	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 min-h-screeneen">
+	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 min-h-screen">
 		<Contact />
 	</section>
 </Layout>
