--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -22,7 +22,7 @@ import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 		</nav>
 
 		<nav
-			class="items-center w-full md:w-auto md:flex text-sw-primary dark:text-sw-secondary min-h-screen md:h-auto"
+			class="items-center w-full md:w-auto md:flex text-sw-primary dark:text-sw-secondary md:h-auto"
 			aria-label="Main navigation"
 			id="menu"
 		>
