Main este é um preview de teste

--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -7,12 +7,12 @@ import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 	class="sticky top-0 z-40 w-full flex-none mx-auto md:backdrop-blur-sm shadow-md bg-sw-secondary dark:bg-sw-primary"
 >
 	<div class="py-4 px-4 lg:px-0 mx-auto w-full md:flex md:justify-between max-w-6xl">
-		
+
 		<nav class="flex justify-between">
 			<a class="flex items-center">
 				<span
 					class="self-center text-2xl font-extrabold text-sw-primary whitespace-nowrap dark:text-sw-secondary"
-					>spacewiz.dev</span
+					>spacewiz.dev - Preview</span
 				>
 			</a>
 			<div class="flex items-center md:hidden">
