--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -12,7 +12,7 @@ import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 			<a class="flex items-center">
 				<span
 					class="self-center text-2xl font-extrabold text-sw-primary whitespace-nowrap dark:text-sw-secondary"
-					>spacewiz.dev - Preview</span
+					>spacewiz.dev</span
 				>
 			</a>
 			<div class="flex items-center md:hidden">
